# website-cloner

./: .gitignore
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
frontend/src/app/: page.tsx
frontend/src/app/api/clone/: route.ts
