[project]
name = "backend"
version = "0.1.0"
description = "Enhanced Orchids Website Cloner"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.*",
  "requests>=2.32",
  "httpx==0.25.2",
  "tenacity==8.2.3",
  "python-dotenv==1.0.0",
  "python-multipart>=0.0.7",
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
]
